--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,20 @@ ul{
     color: firebrick;
     font-size: 20px;
 }
+.header__content{
+    background: purple;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+.header__content-title{
+    font-size: 50px;
+    color: aliceblue;
+}
+.header__content-text{
+    font-size: 30px;
+    color: aliceblue;
+}
