--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ ul{
     font-size: 20px;
 }
 .header__content{
-    background: purple;
-    height: 800px;
+    background: blue;
+    height: 400px;
     display: flex;
     justify-content: center;
     flex-direction: column;
